--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,7 @@
 # Text shown on the index page.
-index_title: I Can't Believe It's Not a Cookbook!
+index_title: Rolandův Receptář
 index_description:
-  Po-tay-toes. Boil 'em, mash 'em, stick 'em in a stew. Lovely big golden chips
-  with a nice piece of fried fish. Even you couldn't say no to that. My mom
-  always said life was like a box of chocolates. *You never know what you're
-  gonna get.*
+  „Ze všech lásek nejupřímnější je láska k jídlu.“
 
 # Whether to show each recipe's image, if available, on the index page. To
 # enable, set this option to any non-empty value (other than "false" in recent
@@ -13,29 +10,29 @@ show_images_on_index:
 
 # You can change the content language (really only relevant for hyphenation)
 # and related textual labels here.
-lang: en
+lang: cz
 strings:
-  search_placeholder: Search...
-  uncategorized_label: Uncategorized
-  source_label: Source
+  search_placeholder: Hledat...
+  uncategorized_label: Bez kategorie
+  source_label: Zdroj
   vegan_label: Vegan
-  meat_label: Meat
-  spicy_label: Spicy
-  sweet_label: Sweet
-  salty_label: Salty
-  sour_label: Sour
-  bitter_label: Bitter
+  meat_label: Maso
+  spicy_label: Pálivé
+  sweet_label: Sladké
+  salty_label: Slané
+  sour_label: Kyselé
+  bitter_label: Hořké
   umami_label: Umami
-  footer_text: Enjoy!
-  updated_on: Updated on
-  edit: Edit
+  footer_text: Nechte si chutnat!
+  updated_on: Aktualizováno
+  edit: Upravit
 
 # If you maintain your recipes in a GitHub repository, you can specify its URL
 # here – if non-empty, an "Edit" link will be shown at the bottom of each recipe
 # page, referring you to the corresponding Markdown file on GitHub. If you've
 # got some sort of continous integration (like the included GitHub Action) set
 # up, this effectively turns your site into a wiki.
-github_url: https://github.com/doersino/nyum
+github_url: https://github.com/schullzroll/recipes
 
 # Remote for deployment – the value of this setting will be passed to rsync as a
 # destination, so you probably want it to look like USER@SERVER:PATH. Make sure
